# esp-idf

LoRa_pyranometer/: README.md  sdkconfig
LoRa_pyranometer/main/: CMakeLists.txt  main.cpp
LoRa_pyranometer/main/components/include/: ads1115.h  bme280_setup.h  bpw34_setup.h  ds18b20_setup.h  dsm501a_setup.h  global_data.h
LoRa_pyranometer/main/components/src/: ads1115.c  bme280_setup.c  bpw34_setup.c  ds18b20_setup.c  dsm501a_setup.c  (+1 more)
LoRa_teste/: CMakeLists.txt  Makefile
LoRa_teste/main/: CMakeLists.txt  main.cpp
bme280_test/: CMakeLists.txt
bme280_test/main/: bme280_setup.h  global_data.h  main.c
devices/castelo_branco/: sdkconfig
dsm501a_test/: CMakeLists.txt
dsm501a_test/main/: CMakeLists.txt  global_data.cpp  global_data.h  main.cpp
escolas/dinarte_pereira/school_monitor/: CMakeLists.txt
inmp441_test/: CMakeLists.txt
inmp441_test/main/: CMakeLists.txt  global_data.cpp  global_data.h  inmp441_setup.cpp  inmp441_setup.h  main.cpp
school_monitor/main/: CMakeLists.txt  Kconfig.projbuild  main.cpp
school_monitor/main/bme280/: bme280_setup.cpp
school_monitor/main/dsm501a/: dsm501a_setup.cpp
school_monitor/main/inmp441/: inmp441_setup.cpp
school_monitor/main/misc/: global_data.cpp  global_data.h  mqtt_setup.c  wifi_setup.c
school_monitor_2/main/: CMakeLists.txt  main.cpp
school_monitor_2/main/misc/: global_data.cpp  global_data.h  ota_setup.c  ota_setup.h  wifi_setup.h
school_monitor_2/server_certs/: ca_cert.pem  ca_key.pem  start_server.py
teste_antena/: CMakeLists.txt  Makefile
teste_antena/main/: CMakeLists.txt  main.cpp
(+27 files in other folders)
